manifests/apps/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
spec:
  selector:
    app: qui
  ports:
    - name: http
      port: 8080
      targetPort: http
