manifests/apps/qui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qui-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway	
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - qui.example.com
  rules:
    - backendRefs: 
      - group: ''
        kind: Service
        name: qui
        port: 8080
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
